[gd_scene load_steps=3 format=2]

[ext_resource path="res://Popup.gd" type="Script" id=1]
[ext_resource path="res://OptionsMenu.tscn" type="PackedScene" id=2]

[node name="PauseMenu" type="Popup"]
pause_mode = 2
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ColorRect" type="ColorRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
color = Color( 0, 0, 0, 0.560784 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="."]
anchor_left = 0.45
anchor_right = 0.55
anchor_bottom = 1.0
margin_left = -49.0
margin_right = 49.0
custom_constants/separation = 62
alignment = 1
__meta__ = {
"_edit_lock_": true,
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="VBoxContainer"]
margin_top = 123.0
margin_right = 200.0
margin_bottom = 137.0
custom_constants/line_spacing = 0
text = "P a u s e d"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HSeparator" type="HSeparator" parent="VBoxContainer"]
self_modulate = Color( 0, 0, 0, 0 )
margin_top = 199.0
margin_right = 200.0
margin_bottom = 231.0
custom_constants/separation = 32

[node name="ResumeButton" type="Button" parent="VBoxContainer"]
margin_top = 293.0
margin_right = 200.0
margin_bottom = 313.0
text = "Resume"

[node name="OptionsButton" type="Button" parent="VBoxContainer"]
margin_top = 375.0
margin_right = 200.0
margin_bottom = 395.0
text = "Options"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="QuitButton" type="Button" parent="VBoxContainer"]
margin_top = 457.0
margin_right = 200.0
margin_bottom = 477.0
text = "Quit to menu"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="OptionsMenu" parent="." instance=ExtResource( 2 )]
visible = false
margin_left = -216.0
margin_top = -124.0
margin_right = 224.0
margin_bottom = 212.0
